[gd_scene load_steps=6 format=3 uid="uid://cfdo4rmg3ew0"]

[ext_resource type="Script" path="res://scripts/world/masa_3.gd" id="1_fy6j4"]
[ext_resource type="Texture2D" uid="uid://bb7y41tc66dmc" path="res://assets/enviroment/Sprite_masa3_roto.png" id="1_lsvfg"]
[ext_resource type="Texture2D" uid="uid://sj13ahcxos45" path="res://assets/enviroment/Sprite_masa3.png" id="2_4vqiq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_37f0t"]
size = Vector3(3.65992, 2.29364, 1.42897)

[sub_resource type="BoxShape3D" id="BoxShape3D_5kwow"]
size = Vector3(2.58374, 1.52463, 0.438356)

[node name="masa3" type="StaticBody3D" groups=["destructiblemasa3"]]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_fy6j4")

[node name="Alive" type="Sprite3D" parent="."]
texture = ExtResource("2_4vqiq")

[node name="Dead" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.422765, -0.223733, 0)
visible = false
texture = ExtResource("1_lsvfg")

[node name="BulletDetector" type="Area3D" parent="."]
collision_mask = 6

[node name="AreaCol" type="CollisionShape3D" parent="BulletDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000711441, -0.0444641, 0.0510483)
shape = SubResource("BoxShape3D_37f0t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.34817, 0, 0, 0, 1.34817, 0, 0, 0, 1.34817, 0.0266583, -0.0222169, -0.000825472)
shape = SubResource("BoxShape3D_5kwow")

[node name="hide_text" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="BulletDetector" to="." method="_on_bullet_detector_body_entered"]
[connection signal="timeout" from="hide_text" to="." method="_on_hide_text_timeout"]
